// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`remediation-instructions-filter-form Renders \`remediation-instructions-filter-form\` with custom props 1`] = `
<div>
  <div
    class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-input--selection-controls v-input--radio-group v-input--radio-group--column"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
        style="height: auto;"
      >
        <div
          class="v-input--radio-group__input"
          role="radiogroup"
        >
          <legend
            class="v-label theme--light"
            style="left: 0px; position: relative;"
          >
            For alarms by instructions
          </legend>
          <div
            class="v-radio theme--light v-item--active"
          >
            <div
              class="v-input--selection-controls__input"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate material-icons theme--light primary--text"
              >
                radio_button_checked
              </i>
              <input
                aria-checked="true"
                name="with"
                role="radio"
                type="radio"
                value="true"
              />
              <div
                class="v-input--selection-controls__ripple primary--text"
              />
            </div>
            <label
              class="v-label theme--light"
              style="left: 0px; position: relative;"
            >
              Show alarms with selected instructions
            </label>
          </div>
          <div
            class="v-radio theme--light"
          >
            <div
              class="v-input--selection-controls__input"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate material-icons theme--light"
              >
                radio_button_unchecked
              </i>
              <input
                aria-checked="false"
                name="with"
                role="radio"
                type="radio"
                value="false"
              />
              <div
                class="v-input--selection-controls__ripple"
              />
            </div>
            <label
              class="v-label theme--light"
              style="left: 0px; position: relative;"
            >
              Show alarms without selected instructions
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="v-input v-input--is-label-active v-input--is-dirty theme--light v-input--selection-controls v-input--switch primary--text"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
      >
        <div
          class="v-input--selection-controls__input"
        >
          <input
            aria-checked="true"
            aria-disabled="false"
            role="switch"
            type="checkbox"
            value=""
          />
          <div
            class="v-input--selection-controls__ripple primary--text"
          />
          <div
            class="v-input--switch__track theme--light primary--text"
          />
          <div
            class="v-input--switch__thumb theme--light primary--text"
          >
            <transition-stub
              mode="out-in"
              name="fab-transition"
            />
          </div>
        </div>
        <label
          class="v-label theme--light"
          style="left: 0px; position: relative;"
        >
          Select all
        </label>
      </div>
      <div
        class="v-messages theme--light primary--text"
      >
        <transition-group-stub
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        />
      </div>
    </div>
  </div>
  <div
    class="layout"
  >
    <div
      class="flex md3 xs6"
    >
      <div
        class="v-input v-input--is-label-active v-input--is-dirty v-input--is-disabled theme--light v-input--selection-controls v-input--checkbox"
      >
        <div
          class="v-input__control"
        >
          <div
            class="v-input__slot"
          >
            <div
              class="v-input--selection-controls__input"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate material-icons theme--light"
              >
                check_box
              </i>
              <input
                aria-checked="true"
                disabled="disabled"
                role="checkbox"
                type="checkbox"
                value=""
              />
              <div
                class="v-input--selection-controls__ripple"
              />
            </div>
            <label
              class="v-label v-label--is-disabled theme--light"
              style="left: 0px; position: relative;"
            >
              Automatic
            </label>
          </div>
          <div
            class="v-messages theme--light"
          >
            <transition-group-stub
              class="v-messages__wrapper"
              name="message-transition"
              tag="div"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="v-input v-input--is-label-active v-input--is-dirty v-input--is-disabled theme--light v-input--selection-controls v-input--checkbox"
    >
      <div
        class="v-input__control"
      >
        <div
          class="v-input__slot"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              check_box
            </i>
            <input
              aria-checked="true"
              disabled="disabled"
              role="checkbox"
              type="checkbox"
              value=""
            />
            <div
              class="v-input--selection-controls__ripple"
            />
          </div>
          <label
            class="v-label v-label--is-disabled theme--light"
            style="left: 0px; position: relative;"
          >
            Manual
          </label>
        </div>
        <div
          class="v-messages theme--light"
        >
          <transition-group-stub
            class="v-messages__wrapper"
            name="message-transition"
            tag="div"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="v-input v-input--is-disabled theme--light v-text-field v-select v-select--is-multi"
  >
    <div
      class="v-input__control"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        class="v-input__slot"
        role="button"
      >
        <div
          class="v-select__slot"
        >
          <label
            class="v-label v-label--is-disabled theme--light"
            style="left: 0px; position: absolute;"
          >
            Selected instructions
          </label>
          <div
            class="v-select__selections"
          >
            <input
              aria-readonly="false"
              autocomplete="off"
              disabled="disabled"
              readonly="readonly"
              type="text"
            />
          </div>
          <div
            class="v-input__append-inner"
          >
            <div />
          </div>
          <div
            class="v-input__append-inner"
          >
            <div
              class="v-input__icon v-input__icon--append"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate v-icon--disabled material-icons theme--light"
              >
                arrow_drop_down
              </i>
            </div>
          </div>
          <input
            name="instructions"
            type="hidden"
          />
        </div>
        <div
          class="v-menu"
        >
          <!---->
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light"
        >
          <transition-group-stub
            class="v-messages__wrapper"
            name="message-transition"
            tag="div"
          />
        </div>
      </div>
    </div>
    <div
      class="v-input__append-outer"
    >
      <c-help-icon-stub
        icon="help"
        left=""
        text="Instructions of selected type are excluded from the list"
      />
    </div>
  </div>
  <div
    class="v-input v-input--hide-details theme--light v-input--selection-controls v-input--radio-group v-input--radio-group--column"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
        style="height: auto;"
      >
        <div
          class="v-input--radio-group__input"
          role="radiogroup"
        >
          <legend
            class="v-label theme--light"
            style="left: 0px; position: relative;"
          >
            Alarms list display
          </legend>
          <div
            class="v-radio theme--light"
          >
            <div
              class="v-input--selection-controls__input"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate material-icons theme--light"
              >
                radio_button_unchecked
              </i>
              <input
                aria-checked="false"
                name="with"
                role="radio"
                type="radio"
                value=""
              />
              <div
                class="v-input--selection-controls__ripple"
              />
            </div>
            <label
              class="v-label theme--light"
              style="left: 0px; position: relative;"
            >
              Show all filtered alarms
            </label>
          </div>
          <div
            class="v-radio theme--light"
          >
            <div
              class="v-input--selection-controls__input"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate material-icons theme--light"
              >
                radio_button_unchecked
              </i>
              <input
                aria-checked="false"
                name="with"
                role="radio"
                type="radio"
                value="true"
              />
              <div
                class="v-input--selection-controls__ripple"
              />
            </div>
            <label
              class="v-label theme--light"
              style="left: 0px; position: relative;"
            >
              Show filtered alarms with instructions in progress
            </label>
          </div>
          <div
            class="v-radio theme--light"
          >
            <div
              class="v-input--selection-controls__input"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate material-icons theme--light"
              >
                radio_button_unchecked
              </i>
              <input
                aria-checked="false"
                name="with"
                role="radio"
                type="radio"
                value="false"
              />
              <div
                class="v-input--selection-controls__ripple"
              />
            </div>
            <label
              class="v-label theme--light"
              style="left: 0px; position: relative;"
            >
              Hide filtered alarms with instructions in progress
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`remediation-instructions-filter-form Renders \`remediation-instructions-filter-form\` with default props 1`] = `
<div>
  <div
    class="v-input v-input--hide-details theme--light v-input--selection-controls v-input--radio-group v-input--radio-group--column"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
        style="height: auto;"
      >
        <div
          class="v-input--radio-group__input"
          role="radiogroup"
        >
          <legend
            class="v-label theme--light"
            style="left: 0px; position: relative;"
          >
            For alarms by instructions
          </legend>
          <div
            class="v-radio theme--light"
          >
            <div
              class="v-input--selection-controls__input"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate material-icons theme--light"
              >
                radio_button_unchecked
              </i>
              <input
                aria-checked="false"
                name="with"
                role="radio"
                type="radio"
                value="true"
              />
              <div
                class="v-input--selection-controls__ripple"
              />
            </div>
            <label
              class="v-label theme--light"
              style="left: 0px; position: relative;"
            >
              Show alarms with selected instructions
            </label>
          </div>
          <div
            class="v-radio theme--light"
          >
            <div
              class="v-input--selection-controls__input"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate material-icons theme--light"
              >
                radio_button_unchecked
              </i>
              <input
                aria-checked="false"
                name="with"
                role="radio"
                type="radio"
                value="false"
              />
              <div
                class="v-input--selection-controls__ripple"
              />
            </div>
            <label
              class="v-label theme--light"
              style="left: 0px; position: relative;"
            >
              Show alarms without selected instructions
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="v-input theme--light v-input--selection-controls v-input--switch"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
      >
        <div
          class="v-input--selection-controls__input"
        >
          <input
            aria-checked="false"
            aria-disabled="false"
            role="switch"
            type="checkbox"
            value=""
          />
          <div
            class="v-input--selection-controls__ripple"
          />
          <div
            class="v-input--switch__track theme--light"
          />
          <div
            class="v-input--switch__thumb theme--light"
          >
            <transition-stub
              mode="out-in"
              name="fab-transition"
            />
          </div>
        </div>
        <label
          class="v-label theme--light"
          style="left: 0px; position: relative;"
        >
          Select all
        </label>
      </div>
      <div
        class="v-messages theme--light"
      >
        <transition-group-stub
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        />
      </div>
    </div>
  </div>
  <div
    class="layout"
  >
    <div
      class="flex md3 xs6"
    >
      <div
        class="v-input theme--light v-input--selection-controls v-input--checkbox"
      >
        <div
          class="v-input__control"
        >
          <div
            class="v-input__slot"
          >
            <div
              class="v-input--selection-controls__input"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate material-icons theme--light"
              >
                check_box_outline_blank
              </i>
              <input
                aria-checked="false"
                role="checkbox"
                type="checkbox"
                value=""
              />
              <div
                class="v-input--selection-controls__ripple"
              />
            </div>
            <label
              class="v-label theme--light"
              style="left: 0px; position: relative;"
            >
              Automatic
            </label>
          </div>
          <div
            class="v-messages theme--light"
          >
            <transition-group-stub
              class="v-messages__wrapper"
              name="message-transition"
              tag="div"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="v-input theme--light v-input--selection-controls v-input--checkbox"
    >
      <div
        class="v-input__control"
      >
        <div
          class="v-input__slot"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              check_box_outline_blank
            </i>
            <input
              aria-checked="false"
              role="checkbox"
              type="checkbox"
              value=""
            />
            <div
              class="v-input--selection-controls__ripple"
            />
          </div>
          <label
            class="v-label theme--light"
            style="left: 0px; position: relative;"
          >
            Manual
          </label>
        </div>
        <div
          class="v-messages theme--light"
        >
          <transition-group-stub
            class="v-messages__wrapper"
            name="message-transition"
            tag="div"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="v-input theme--light v-text-field v-select v-select--is-multi"
  >
    <div
      class="v-input__control"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        class="v-input__slot"
        role="button"
      >
        <div
          class="v-select__slot"
        >
          <label
            class="v-label theme--light"
            style="left: 0px; position: absolute;"
          >
            Selected instructions
          </label>
          <div
            class="v-select__selections"
          >
            <input
              aria-readonly="false"
              autocomplete="off"
              readonly="readonly"
              type="text"
            />
          </div>
          <div
            class="v-input__append-inner"
          >
            <div />
          </div>
          <div
            class="v-input__append-inner"
          >
            <div
              class="v-input__icon v-input__icon--append"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate material-icons theme--light"
              >
                arrow_drop_down
              </i>
            </div>
          </div>
          <input
            name="instructions"
            type="hidden"
          />
        </div>
        <div
          class="v-menu"
        >
          <!---->
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light"
        >
          <transition-group-stub
            class="v-messages__wrapper"
            name="message-transition"
            tag="div"
          />
        </div>
      </div>
    </div>
    <div
      class="v-input__append-outer"
    >
      <c-help-icon-stub
        icon="help"
        left=""
        text="Instructions of selected type are excluded from the list"
      />
    </div>
  </div>
  <div
    class="v-input v-input--hide-details theme--light v-input--selection-controls v-input--radio-group v-input--radio-group--column"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
        style="height: auto;"
      >
        <div
          class="v-input--radio-group__input"
          role="radiogroup"
        >
          <legend
            class="v-label theme--light"
            style="left: 0px; position: relative;"
          >
            Alarms list display
          </legend>
          <div
            class="v-radio theme--light"
          >
            <div
              class="v-input--selection-controls__input"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate material-icons theme--light"
              >
                radio_button_unchecked
              </i>
              <input
                aria-checked="false"
                name="with"
                role="radio"
                type="radio"
                value=""
              />
              <div
                class="v-input--selection-controls__ripple"
              />
            </div>
            <label
              class="v-label theme--light"
              style="left: 0px; position: relative;"
            >
              Show all filtered alarms
            </label>
          </div>
          <div
            class="v-radio theme--light"
          >
            <div
              class="v-input--selection-controls__input"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate material-icons theme--light"
              >
                radio_button_unchecked
              </i>
              <input
                aria-checked="false"
                name="with"
                role="radio"
                type="radio"
                value="true"
              />
              <div
                class="v-input--selection-controls__ripple"
              />
            </div>
            <label
              class="v-label theme--light"
              style="left: 0px; position: relative;"
            >
              Show filtered alarms without instructions in progress
            </label>
          </div>
          <div
            class="v-radio theme--light"
          >
            <div
              class="v-input--selection-controls__input"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate material-icons theme--light"
              >
                radio_button_unchecked
              </i>
              <input
                aria-checked="false"
                name="with"
                role="radio"
                type="radio"
                value="false"
              />
              <div
                class="v-input--selection-controls__ripple"
              />
            </div>
            <label
              class="v-label theme--light"
              style="left: 0px; position: relative;"
            >
              Hide filtered alarms without instructions in progress
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
